--- a/src/pug/powercontrol.pug
+++ b/src/pug/powercontrol.pug
@@ -20,6 +20,7 @@ block content
     include ./components/powercontrol/_generation
     include ./components/powercontrol/_wiring
     include ./components/powercontrol/_created
+    include ./components/powercontrol/_control
     include ./components/powercontrol/_types
     include ./components/powercontrol/_order
     include ./components/pedalbox/_certificates
