--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -78,3 +78,4 @@
 @import "_components/powercontrol/generation";
 @import "_components/powercontrol/wiring";
 @import "_components/powercontrol/created";
+@import "_components/powercontrol/control";
