--- a/src/pug/components/powercontrol/_powercontrol.pug
+++ b/src/pug/components/powercontrol/_powercontrol.pug
@@ -9,7 +9,8 @@ section.section#powercontrol.powercontrol
 
       .powercontrol__row.powercontrol__row-0
         .powercontrol__row-left
-          img(src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title="")
+          img.powercontrol__img.powercontrol__img--desktop(src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title="")
+          img.powercontrol__img.powercontrol__img--mobile(src="./img/img-powercontrol-mobile.png" srcset="./img/img-powercontrol-mobile@2x.png 2x" alt="" title="")
 
         .powercontrol__row-right
           h1.powercontrol__title!= "PowerControl"
@@ -31,6 +32,8 @@ section.section#powercontrol.powercontrol
 
           p.powercontrol__text.powercontrol__text--pb!= "Zapewnia wzrost mocy i momentu aż do 30%, a ponadto obniża spalanie samochodu do 1l na 100km."
           p.powercontrol__text!= "Pokochaj swój samochód – na nowo – dzięki chiptuningowi nowej generacji od firmy DTE Systems. <span>Made in Germany.</span>"
+
+          img.powercontrol__img.powercontrol__img--dte(src="./img/img-powercontrol-dte.png" srcset="./img/img-powercontrol-dte@2x.png 2x" alt="" title="")
 
       .powercontrol__row.powercontrol__row-1
         a.powercontrol__btn.c-btn(href="#" class="" title="")!= "Poznaj PowerControl"
