--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -13643,14 +13643,31 @@ section.section {
   background-color: #ecf7ff;
 }
 
-/* line 19, src/scss/_components/powercontrol/_article.scss */
+@media screen and (max-width: 575px) {
+  /* line 8, src/scss/_components/powercontrol/_article.scss */
+  .article:before {
+    height: calc(100% - (55px + 50px));
+  }
+}
+
+/* line 22, src/scss/_components/powercontrol/_article.scss */
 .article__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-/* line 22, src/scss/_components/powercontrol/_article.scss */
+@media screen and (max-width: 575px) {
+  /* line 22, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/* line 28, src/scss/_components/powercontrol/_article.scss */
 .article__wrapper-left {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13664,34 +13681,127 @@ section.section {
   width: 459px;
 }
 
-/* line 28, src/scss/_components/powercontrol/_article.scss */
+@media screen and (max-width: 767px) {
+  /* line 28, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper-left {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 28, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper-left {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+/* line 42, src/scss/_components/powercontrol/_article.scss */
 .article__wrapper-left img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-/* line 35, src/scss/_components/powercontrol/_article.scss */
+@media screen and (max-width: 575px) {
+  /* line 42, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper-left img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* line 53, src/scss/_components/powercontrol/_article.scss */
 .article__wrapper-right {
   width: 100%;
   max-width: calc(100% - 459px);
 }
 
-/* line 41, src/scss/_components/powercontrol/_article.scss */
+@media screen and (max-width: 767px) {
+  /* line 53, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper-right {
+    max-width: 60%;
+    padding-left: 15px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 53, src/scss/_components/powercontrol/_article.scss */
+  .article__wrapper-right {
+    max-width: 100%;
+    padding-left: 0;
+  }
+}
+
+/* line 67, src/scss/_components/powercontrol/_article.scss */
 .article__text {
   padding-top: 130px;
   padding-bottom: 52px;
   color: #0a1723;
   font-size: 30px;
   font-weight: bold;
+  font-size: 16px;
 }
 
-/* line 49, src/scss/_components/powercontrol/_article.scss */
+@media screen and (min-width: 320px) {
+  /* line 67, src/scss/_components/powercontrol/_article.scss */
+  .article__text {
+    font-size: calc(16px + 14 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 67, src/scss/_components/powercontrol/_article.scss */
+  .article__text {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* line 67, src/scss/_components/powercontrol/_article.scss */
+  .article__text {
+    padding-top: 100px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 67, src/scss/_components/powercontrol/_article.scss */
+  .article__text {
+    padding-top: 45px;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+}
+
+/* line 84, src/scss/_components/powercontrol/_article.scss */
 .article__btn {
-  max-width: 350px;
+  max-width: 196px;
 }
 
-/* line 52, src/scss/_components/powercontrol/_article.scss */
+@media screen and (min-width: 320px) {
+  /* line 84, src/scss/_components/powercontrol/_article.scss */
+  .article__btn {
+    max-width: calc(196px + 154 * (100vw - 320px) / 1120);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  /* line 84, src/scss/_components/powercontrol/_article.scss */
+  .article__btn {
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 84, src/scss/_components/powercontrol/_article.scss */
+  .article__btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* line 91, src/scss/_components/powercontrol/_article.scss */
 .article__btn-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13700,6 +13810,13 @@ section.section {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-right: 115px;
+}
+
+@media screen and (max-width: 991px) {
+  /* line 91, src/scss/_components/powercontrol/_article.scss */
+  .article__btn-wrapper {
+    padding-right: 0;
+  }
 }
 
 /* line 3, src/scss/_components/powercontrol/_assembly.scss */
